- Refined Optimization Helper - Added File Helper     - Helps find large groups of files easily by extension(s) - Added Logger - Added automatic creation of release build folder
Co-authored-by: Gareth48
<Epimonster@users.noreply.github.com>
Co-authored-by: Cyro <BlueCyro@users.noreply.github.com>

--- a/PCDToPNG.csproj
+++ b/PCDToPNG.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -11,12 +11,39 @@
     <PublishSingleFile>true</PublishSingleFile>
     <DocumentationFile>./Docs.xml</DocumentationFile>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+
+
+    <ReleaseBuild>./ReleaseBuild/</ReleaseBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Magick.NET-Q16-HDRI-OpenMP-x64" Version="13.10.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
+
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Copy SourceFiles="./hpcdtoppm.exe" DestinationFolder="$(OutDir)" />
+  </Target>
+
+  <Target Name="CopyToReleases" AfterTargets="Publish">
+    <ItemGroup>
+      <PublishFiles Include="$(PublishDir)**/*" />
+    </ItemGroup>
+
+    <Copy SourceFiles="@(PublishFiles)" DestinationFolder="$(ReleaseBuild)" />
+  </Target>
+
+  <Target Name="DeepClean">
+    <ItemGroup>
+      <FilesToDelete Include="$(ReleaseBuild)/**/" />
+    </ItemGroup>
+
+    <Delete Files="@(FilesToDelete)" />
+  </Target>
+
 
 </Project>
